# GRIP-GNN

./: README.md  old_gat_withweight.py  prediction.ipynb  prediction.py  pyproject.toml  run_tcga_prediction20250716.ipynb  run_tcga_prediction20250716.py
